--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,141 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-icons.min.css" rel="stylesheet">
 </head>
+
 <body>
     <div class="bg-white">
         <div class="container-lg text-center">
             <div class="text-center pb-5 pt-5 mt-4">
+                <div class="h1 mt-5">
+                    FOOD MENU
+                </div>
+                <div class="small text-secondary pb-5">
+                    WE HAVE SPECIAL MENUS
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-lg">
+        <div class="row row-cols-md-2 g-5">
+            <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <img src="img/gallery-img1.jpg" alt="" class="img-fluid rounded-3">
+                    </div>
+                    <div class="position-absolute pt-5 mt-5 px-4 right-0">
+                        <div class="text-dark btn bg-white rounded-2 py-1 px-2 mb-2 mr-1">$24</div>
+                    </div>
+                    <div class="col">
+                        <div class="h5 text-secondary">
+                            Breakfast
+                        </div>
+                        <div class="text-secondary mb-2">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ab pariatur assumenda quasi esse, aspernatur fugiat nam laudantium!
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <img src="img/gallery-img4.jpg" alt="" class="img-fluid rounded-3">
+                    </div>
+                    <div class="position-absolute pt-5 mt-5 px-4 right-0">
+                        <div class="text-dark btn bg-white rounded-2 py-1 px-2 mb-2 mr-1">$32</div>
+                    </div>
+                    <div class="col">
+                        <div class="h5 text-secondary">
+                            Seafood
+                        </div>
+                        <div class="text-secondary mb-2">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ullam nisi enim labore, iure nihil tempora eos reprehenderit.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <img src="img/gallery-img2.jpg" alt="" class="img-fluid rounded-3">
+                    </div>
+                    <div class="position-absolute pt-5 mt-5 px-4 right-0">
+                        <div class="text-dark btn bg-white rounded-2 py-1 px-2 mb-2 mr-1">$36</div>
+                    </div>
+                    <div class="col">
+                        <div class="h5 text-secondary">
+                            New Pizza
+                        </div>
+                        <div class="text-secondary mb-2">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam commodi eius iusto obcaecati nihil et molestiae officiis vel!
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <img src="img/gallery-img5.jpg" alt="" class="img-fluid rounded-3">
+                    </div>
+                    <div class="position-absolute pt-5 mt-5 px-4 right-0">
+                        <div class="text-dark btn bg-white rounded-2 py-1 px-2 mb-2 mr-1">$64</div>
+                    </div>
+                    <div class="col">
+                        <div class="h5 text-secondary">
+                            Spicy Beef
+                        </div>
+                        <div class="text-secondary mb-2">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error eius eos quae hic possimus ullam non id.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <img src="img/gallery-img3.jpg" alt="" class="img-fluid rounded-3">
+                    </div>
+                    <div class="position-absolute pt-5 mt-5 px-4 right-0">
+                        <div class="text-dark btn bg-white rounded-2 py-1 px-2 mb-2 mr-1">$24</div>
+                    </div>
+                    <div class="col">
+                        <div class="h5 text-secondary">
+                            Mushroom
+                        </div>
+                        <div class="text-secondary mb-2">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt optio vitae pariatur odit unde dicta tempora reprehenderit cum.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="row align-items-center">
+                    <div class="col-5">
+                        <img src="img/gallery-img6.jpg" alt="" class="img-fluid rounded-3">
+                    </div>
+                    <div class="position-absolute pt-5 mt-5 px-4 right-0">
+                        <div class="text-dark btn bg-white rounded-2 py-1 px-2 mb-2 mr-1">$45</div>
+                    </div>
+                    <div class="col">
+                        <div class="h5 text-secondary">
+                            Dinner
+                        </div>
+                        <div class="text-secondary mb-2">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ratione eos rerum nisi recusandae suscipit voluptates libero facilis.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-white">
+        <div class="container-lg text-center">
+            <div class="text-center pb-5 pt-5 mt-5">
                 <div class="h1 mt-4">
                     FOOD GALLERY
                 </div>
@@ -92,8 +224,9 @@
             </div>
         </div>
     </div>
-    
-    
+
+
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
