--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <div class="h5 text-secondary">
                             Dinner
                         </div>
-                        <div class="text-secondary mb-2">
+                        <div class="text-secondary">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ratione eos rerum nisi recusandae suscipit voluptates libero facilis.
                         </div>
                     </div>
@@ -139,7 +139,22 @@
             </div>
         </div>
     </div>
-
+    
+    <div class="bg-body-secondary">
+        <div class="container-lg overflow-hidden text-center pt-5 mt-5">
+            <div class="row gx-4">
+              <div class="col">
+               <div class="p-3 h2">OUR TASTE</div>
+               <div class="small text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta praesentium impedit nobis repudiandae, minus at ipsam aliquam quod quasi quas ab atque esse reprehenderit aut explicabo corporis recusandae cumque tempora ipsum, omnis laborum aperiam in? Accusantium quos numquam adipisci perferendis?</div>
+              </div>
+              <div class="col">
+                <div class="p-3 h2">OUR SERVICE</div>
+                <div class="small text-secondary pb-5 mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo tempore id facere magnam nam, consectetur iste! Magnam laboriosam, sapiente necessitatibus natus similique, mollitia cum facilis voluptates maxime laudantium pariatur, consectetur harum iure totam quasi ullam assumenda exercitationem ea. Nemo, saepe.</div>
+              </div>
+            </div>
+        </div>
+    </div>
+    
     <div class="bg-white">
         <div class="container-lg text-center">
             <div class="text-center pb-5 pt-5 mt-5">
