--- a/index.html
+++ b/index.html
@@ -10,6 +10,63 @@
 </head>
 
 <body>
+    <div id="carousel" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true"
+                aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1900">
+                <img src="img/home-bg-slideshow.jpg" class="img-fluid d-block w-100" alt="">
+                <div class="position-absolute top-50 start-50 translate-middle text-center">
+                    <div class="display-4 text-white fw-bold">Steak House</div>
+                    <div class="text-secondary p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci
+                        recusandae facere repudiandae, error corporis autem porro ducimus nisi a voluptate dicta
+                        blanditiis sit sint maxime quo? Alias tempore et neque facere.
+                    </div>
+                    <div class="pt-4">
+                        <a href="#" class="btn btn-outline-light ">DISCOVER NOW</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="1900">
+                <img src="img/home-bg-slideshow.jpg" class="img-fluid d-block w-100" alt="...">
+                <div class="position-absolute top-50 start-50 translate-middle text-center">
+                    <div class="display-4 text-white fw-bold">Steak House</div>
+                    <div class="text-secondary p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci
+                        recusandae facere repudiandae, error corporis autem porro ducimus nisi a voluptate dicta
+                        blanditiis sit sint maxime quo? Alias tempore et neque facere.
+                    </div>
+                    <div class="pt-4">
+                        <a href="#" class="btn btn-outline-light">DISCOVER NOW</a>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="1900">
+                <img src="img/home-bg-slideshow.jpg" class="img-fluid d-block w-100" alt="...">
+                <div class="position-absolute top-50 start-50 translate-middle text-center">
+                    <div class="display-4 text-white fw-bold">Steak House</div>
+                    <div class="text-secondary p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et adipisci
+                        recusandae facere repudiandae, error corporis autem porro ducimus nisi a voluptate dicta
+                        blanditiis sit sint maxime quo? Alias tempore et neque facere.
+                    </div>
+                    <div class="pt-4">
+                        <a href="#" class="btn btn-outline-light ">DISCOVER NOW</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <div class="bg-white">
         <div class="container-lg text-center">
             <div class="text-center pb-5 pt-5 mt-4">
@@ -37,7 +94,8 @@
                             Breakfast
                         </div>
                         <div class="text-secondary mb-2">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ab pariatur assumenda quasi esse, aspernatur fugiat nam laudantium!
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint ab pariatur assumenda quasi
+                            esse, aspernatur fugiat nam laudantium!
                         </div>
                     </div>
                 </div>
@@ -56,7 +114,8 @@
                             Seafood
                         </div>
                         <div class="text-secondary mb-2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ullam nisi enim labore, iure nihil tempora eos reprehenderit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ullam nisi enim labore, iure
+                            nihil tempora eos reprehenderit.
                         </div>
                     </div>
                 </div>
@@ -75,7 +134,8 @@
                             New Pizza
                         </div>
                         <div class="text-secondary mb-2">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam commodi eius iusto obcaecati nihil et molestiae officiis vel!
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam commodi eius iusto
+                            obcaecati nihil et molestiae officiis vel!
                         </div>
                     </div>
                 </div>
@@ -94,7 +154,8 @@
                             Spicy Beef
                         </div>
                         <div class="text-secondary mb-2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error eius eos quae hic possimus ullam non id.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error eius eos quae hic
+                            possimus ullam non id.
                         </div>
                     </div>
                 </div>
@@ -113,7 +174,8 @@
                             Mushroom
                         </div>
                         <div class="text-secondary mb-2">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt optio vitae pariatur odit unde dicta tempora reprehenderit cum.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt optio vitae pariatur odit
+                            unde dicta tempora reprehenderit cum.
                         </div>
                     </div>
                 </div>
@@ -132,29 +194,36 @@
                             Dinner
                         </div>
                         <div class="text-secondary">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ratione eos rerum nisi recusandae suscipit voluptates libero facilis.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis ratione eos rerum nisi
+                            recusandae suscipit voluptates libero facilis.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <div class="bg-body-secondary">
         <div class="container-lg overflow-hidden text-center pt-5 mt-5">
             <div class="row gx-4">
-              <div class="col">
-               <div class="p-3 h2">OUR TASTE</div>
-               <div class="small text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta praesentium impedit nobis repudiandae, minus at ipsam aliquam quod quasi quas ab atque esse reprehenderit aut explicabo corporis recusandae cumque tempora ipsum, omnis laborum aperiam in? Accusantium quos numquam adipisci perferendis?</div>
-              </div>
-              <div class="col">
-                <div class="p-3 h2">OUR SERVICE</div>
-                <div class="small text-secondary pb-5 mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo tempore id facere magnam nam, consectetur iste! Magnam laboriosam, sapiente necessitatibus natus similique, mollitia cum facilis voluptates maxime laudantium pariatur, consectetur harum iure totam quasi ullam assumenda exercitationem ea. Nemo, saepe.</div>
-              </div>
+                <div class="col">
+                    <div class="p-3 h2">OUR TASTE</div>
+                    <div class="small text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
+                        praesentium impedit nobis repudiandae, minus at ipsam aliquam quod quasi quas ab atque esse
+                        reprehenderit aut explicabo corporis recusandae cumque tempora ipsum, omnis laborum aperiam in?
+                        Accusantium quos numquam adipisci perferendis?</div>
+                </div>
+                <div class="col">
+                    <div class="p-3 h2">OUR SERVICE</div>
+                    <div class="small text-secondary pb-5 mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Explicabo tempore id facere magnam nam, consectetur iste! Magnam laboriosam, sapiente
+                        necessitatibus natus similique, mollitia cum facilis voluptates maxime laudantium pariatur,
+                        consectetur harum iure totam quasi ullam assumenda exercitationem ea. Nemo, saepe.</div>
+                </div>
             </div>
         </div>
     </div>
-    
+
     <div class="bg-white">
         <div class="container-lg text-center">
             <div class="text-center pb-5 pt-5 mt-5">
